# omigo-data-analytics

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  install.sh
.github/: dependabot.yml  pull_request_template.md  wordlist.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bandit.yml  codeql.yml  flake8.yml  publish-arjun.yml  publish-core.yml  publish-ext.yml  publish-hydra.yml  publish-lokki.yml  publish-matel.yml  publish.yml  pylint.yml  spellcheck.yaml  spelling.yml
aloki/: pom.xml
aloki/java/omigo_ext/hydra/: ClusterData.java
aloki/src/main/java/omigo_core/: S3Wrapper.java
aloki/src/main/scala/omigo_core/: .FilePathsUtil.scala.swp  .TSVUtils.scala.swp  .Utils.scala.swp  ETL.scala  FileIOWrapper.scala  FilePathsDataReader.scala  FilePathsUtil.scala  FuncLib.scala  S3Wrapper.scala  ScalaS3Wrapper.scala  TSV.scala  TSVUtils.scala  Utils.scala
data/: iris.tsv
deploy/: Dockerfile  docker-entrypoint.sh
docs/: api-doc.md  api-spec.md
docs/references/: Omigo_Graph_Visualizations.docx  References_Lokki.docx  docker-tutorial-summary.txt  external_websites.md  external_websites.txt
example-notebooks/: basic_example.ipynb  charts.ipynb  extend-class-example.ipynb  extend-class.ipynb  graphs.ipynb  json-parsing.ipynb  stock-sliding-window.ipynb
example-notebooks/archive/: stock-sliding-window.ipynb
lokki/: pom.xml
lokki/src/main/scala/omigo_core/: .TSV.scala.swp  .TSVUtils.scala.swp  ETL.scala  FileIOWrapper.scala  FilePathsDataReader.scala  FilePathsReader.scala  FilePathsUtil.scala  LocalFSWrapper.scala  S3IOWrapper.scala  S3Wrapper.scala  TSV.scala  TSVUtils.scala  Utils.scala
notebooks/: basic.ipynb  basic_example.html  basic_example.ipynb  graphs.html  graphs.ipynb  stock-market-sliding-window-example.ipynb
projects/hydra/scripts/: get-alive-wf-ids.py  get-created-wf-ids.py  get-local-alive-wf-ids.py  get-local-created-wf-ids.py  get-local-non-created-wf-ids.py  get-shell-executor-script.py  run-generate-script.sh  run-rsync.sh
projects/hydra/scripts/run-entities/: create-cluster.py  create-cluster.sh  kill-all-entities.sh  run-all-entities.sh  run-entity.py  run-entity.sh
projects/lokki/go/: README.md
projects/lokki/go/modules/s3io-wrapper/: env-file  go.mod  go.sum
projects/lokki/java-scala/: README.md  prop.file
projects/lokki/scala/: pom.xml
projects/matel/graph-analysis/: README.md  build.sbt  propfile  run.shell
projects/matel/graph-analysis/.bsp/: sbt.json
projects/matel/graph-analysis/data/input/: sample.tsv
projects/matel/probabilistic-search/: build.sbt
projects/matel/text-analysis/: build.sbt
projects/matel/trends-analysis/: README.md  build.sbt  run.shell
projects/matel/trends-analysis/data/input/: sample.tsv
projects/web/api/: run.sh  server.py
projects/web/api/data/avengers/: timeline.txt
projects/web/ui/: run.sh
projects/web/ui/static/: demo_graphviz.html  demo_mermaid.html  demo_sankey_echarts.html  demo_sankey_echarts.js  demo_table_d3.html  helloworld.html
projects/work-in-progress/web/api/: server.py
projects/work-in-progress/web/api/data/: marvel_vtsv.tsv
projects/work-in-progress/web/ui/: run.sh  server.py  server_nocache.py
python-packages/arjun/: pyproject.toml  setup.cfg
python-packages/arjun/src/omigo_arjun/: cluster_plot.py
python-packages/core/: pyproject.toml  requirements.txt  setup.cfg
python-packages/core/src/omigo_core/: dataframe.py  dataset.py  dfutils.py  etl.py  file_io_wrapper.py  file_paths_data_reader.py  file_paths_util.py  funclib.py  graph_traversal.py  llm_funcs.py  local_fs_wrapper.py  s3_wrapper.py  s3io_wrapper.py  timefuncs.py  tsv.py  tsvutils.py  udfs.py  utils.py  wsclient.py
python-packages/core/src/tsv_data_analytics/: file_io_wrapper.py  file_paths_data_reader.py  file_paths_reader.py  file_paths_util.py  funclib.py  s3_wrapper.py  tsv.py  tsvutils.py  utils.py
python-packages/core/test/: test_tsv.py
python-packages/extensions/: pyproject.toml  setup.cfg
python-packages/extensions/src/omigo_ext/: etl_ext.py  etlext.py  geomap_viz.py  graph_ext.py  graphext.py  graphviz_ext.py  jira_ext.py  kafka_ext.py  logscale_ext.py  multithread_ext.py  mysql_ext.py  pandas_ext.py  plotly_ext.py  presto_ext.py  spark_ext.py  splunk_common.py  splunk_ext.py  sql_helper.py  stats.py  ws_ext.py
python-packages/extensions/src/omigo_ext/work-in-progress/: pandas_ext.py  presto_ext.py  spark_ext.py  splunk_ext.py  sql_helper.py
python-packages/extensions/src/omigo_ext/work-in-progress/hydra/: cluster_class_reflection.py  cluster_common.py  cluster_common_v2.py  cluster_data.py  cluster_ext.py  cluster_funcs.py  cluster_plot.py  cluster_protocol.py  cluster_protocol_v2.py  cluster_services.py  cluster_services_v2.py  cluster_shell_ext.py  cluster_tsv.py  non_cluster_job_runner.py  s3io_wrapper.py
python-packages/extensions/src/tsv_data_analytics_ext/: etlext.py  graphext.py  multi_thread_ext.py  tsvutilsext.py  web_service_ext.py  wsext.py
python-packages/extensions/test-data/: sample-1.json
python-packages/hydra/: pyproject.toml  setup.cfg
python-packages/hydra/src/omigo_hydra/: cluster_arjun.py  cluster_class_reflection.py  cluster_common.py  cluster_common_v2.py  cluster_data.py  cluster_ext.py  cluster_funcs.py  cluster_plot.py  cluster_protocol.py  cluster_protocol_v2.py  cluster_services.py  cluster_services_v2.py  cluster_shell_ext.py  cluster_tsv.py  custom_block_ext.py  etl.py  file_io_wrapper.py  file_paths_data_reader.py  file_paths_reader.py  file_paths_util.py  hydra.py  local_fs_wrapper.py  non_cluster_job_runner.py  s3_wrapper.py  s3io_wrapper.py
python-packages/hydra/src/omigo_hydra/archive/: custom_block_ext.py
python-packages/hydra/src/omigo_hydra/v1/: cluster_common.py  cluster_ext.py  cluster_protocol.py
python-packages/lokki/: pyproject.toml  setup.cfg
python-packages/matel/: pyproject.toml  setup.cfg
python-packages/webdev/: setup.cfg
src/tsv_data_analytics/: etlext.py  file_paths_reader.py  file_paths_util.py  tsv.py  tsvext.py  tsvutils.py
(+30 files in other folders)
