[metadata]
name = omigo_core
version = 0.3.7
author = amit jaiswal
author_email = amit.jaiswal@gmail.com
description = Data Analytics Library for Python 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CrowdStrike/omigo-data-analytics
project_urls =
    Bug Tracker = https://github.com/CrowdStrike/omigo-data-analytics/browse
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    boto3
    mmh3
    numpy
    pandas
    statistics
    requests
    python-dateutil
    six 
[options.packages.find]
where = src
