[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omigo-ext"
version = "0.9.3"
description = "Extensions for omigo_core package"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "amit jaiswal", email = "amit.jaiswal@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "omigo-core",
    "kafka-python",
    "google-api-python-client",
    "graphviz",
    "jira",
    "bokeh",
    "humiolib",
    "splunk-sdk",
]

[project.urls]
Homepage = "https://github.com/CrowdStrike/omigo-data-analytics"
"Bug Tracker" = "https://github.com/CrowdStrike/omigo-data-analytics/browse"

[tool.hatch.build.targets.wheel]
packages = ["src/omigo_ext"]

