[metadata]
name = omigo_ext
version = 0.7.1
author = amit jaiswal
author_email = amit.jaiswal@gmail.com
description = Extensions for omigo_core package 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CrowdStrike/omigo-data-analytics
project_urls =
    Bug Tracker = https://github.com/CrowdStrike/omigo-data-analytics/browse
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas
    statistics
    matplotlib
    seaborn
    omigo_core
    kafka-python
    google-api-python-client
    graphviz
    jira
    bokeh
    humiolib
    pyspark
    splunklib
[options.packages.find]
where = src
