[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omigo_hydra"
version = "0.9.3"
description = "Data Analytics Library for Python"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "amit jaiswal", email = "amit.jaiswal@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "omigo_core",
    "omigo_ext",
    "dill",
]

[project.urls]
Homepage = "https://github.com/CrowdStrike/omigo-data-analytics"
"Bug Tracker" = "https://github.com/CrowdStrike/omigo-data-analytics/browse"

[tool.setuptools.packages.find]
where = ["src"]

