[metadata]
name = omigo_matel
version = 0.7.2
author = amit jaiswal
author_email = amit.jaiswal@gmail.com
description = Data Analytics Library for Python 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CrowdStrike/omigo-data-analytics
project_urls =
    Bug Tracker = https://github.com/CrowdStrike/omigo-data-analytics/browse
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    omigo_core
    omigo_ext
    omigo_hydra
[options.packages.find]
where = src
